Fixes issue 13 - add header and subhead

--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,8 @@
    <script src="popup.js"></script>
   </head>
   <body>
-  	<h1>Hello world</h1>
+  	<h1>Lionblock</h1>
+    <h3>An ad blocker for Lindenwood University</h3>
   	<p id="clickable">Click me!</p>
   </body>
 </html>
