--- a/popup.html
+++ b/popup.html
@@ -7,29 +7,74 @@
 <html>
   <head>
     <title>Lionblock Popup</title>
-    <!-- this CSS should be in a separate file -->
-    <style>
-      body {
-        font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
-        font-size: 100%;
-      }
-      #status {
-        /* avoid an excessively wide status text */
-        white-space: pre;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        max-width: 400px;
-      }
-    </style>
 
-    <!--
-      - JavaScript and HTML must be in separate files
-     -->
-   <script src="popup.js"></script>
+    <!-- Section added by Marco De Lucca 
+      -  setting bootstrap 
+      -  Bootstrap Core CSS 
+         Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="assets/bootstrap-toggle-master/css/bootstrap2-toggle.min.css">
+
+    <!-- Bootstrap Core CSS -->
+    <!-- Latest compiled and minified CSS -->
+    <!-- <link href="assets/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet"> -->
+
+    <!-- Style CSS -->
+    <link href="assets/css/lionblock.css" rel="stylesheet" />
+
   </head>
+
+
   <body>
-  	<h1>Hello world</h1>
-  	<p id="clickable">Click me!</p>
+      <div class="main-container center">
+
+        <!-- Plugin Tittle -->
+        <h1 class = "brand" >LionBlock</h1>
+        
+        <p class = "adBlocker">Ad Blocker for Lindenwood Univesity.</p>
+
+
+        <!-- Rounded switch -->
+        <div class="checkbox checkbox-slider-lg checkbox-slider--a">
+          <label>
+            <input type="checkbox" data-style="ios" data-onstyle="success" data-offstyle="danger" data-toggle="toggle" data-on="ON" data-off="OFF" data-width="110" data-height="40">
+          </label>
+        </div>
+
+        <hr>
+
+        <label>
+          <span id="click-tag" class="glyphicon glyphicon-chevron-down menu-item"></span>
+
+        </label>
+
+      </div>
+
+
+      <!-- Option container -->
+      <div class="option-container center">
+        <div class="btn-group-vertical">
+          <div class="btn-group">
+            <button type="button" class="btn btn-warning"> Allow Ads on Page </button>
+          </div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-warning"> Allow Ads on Domain </button>
+          </div>
+          <div class="btn-group">
+            <button type="button" class="btn btn-warning"> Do not Block Ads on Page </button>
+          </div>
+        </div>
+        <h2> Statistics (?): </h2>
+      </div>
+
+
+  <!--
+    - Calling Bootstrap JS and Jquery
+   -->
+  <script src="assets/jquery/jquery-3.1.1.min.js"></script>
+  <script src="assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+  <script src="popup.js"></script>
+  <script src="assets/bootstrap-toggle-master/js/bootstrap2-toggle.min.js"></script>
   </body>
 </html>
-
