Add margin to the info-container by 15px. Added To Dos to the front-end.

--- a/popup.html
+++ b/popup.html
@@ -83,7 +83,7 @@
 
       
       <div class = "item">
-        <div class="main-container center" alt = "Second slide"">
+        <div class="info-container center" alt = "Second slide"">
 
           <!-- Plugin Tittle -->
           <h1 class = "brand" >Info</h1>
