Connect front-end to backend

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,6 @@
       -  Bootstrap Core CSS 
          Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <link rel="stylesheet" href="assets/bootstrap-toggle-master/css/bootstrap2-toggle.min.css">
 
     <!-- Bootstrap Core CSS -->
@@ -48,16 +47,16 @@
               + A divider.
               + Dropdown icon, expands the menu for more advance options.
           -->
-          <div class="main-container center" alt = "First slide"">
+          <div class="main-container center" alt = "First slide">
 
             <!-- Plugin Tittle -->
-            <h1 class = "brand" ><img src="assets/images/lionblock-logo.png" ></h1>
+            <h1 class="brand"><img src="assets/images/lionblock-logo.png" ></h1>
             <p class = "adBlocker">Ad Blocker for Lindenwood University.</p>
 
             <!-- Rounded switch -->
-            <div class="checkbox checkbox-slider-lg checkbox-slider--a">
+            <div class="checkbox checkbox-slider-lg checkbox-slider--a" >
               <label>
-                <input type="checkbox" data-style="ios" data-onstyle="success" data-offstyle="danger" data-toggle="toggle" data-on="ON" data-off="OFF" data-width="110" data-height="40">
+                <input id="blockingCheckbox" type="checkbox" data-style="ios" data-onstyle="success" data-offstyle="danger" data-toggle="toggle" data-on="ON" data-off="OFF" data-width="110" data-height="40">
               </label>
             </div>
 
@@ -112,7 +111,7 @@
               + Header and team names. THIS NEEDS WORK!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
           -->
         <div class = "item">
-          <div class="info-container center" alt = "Second slide"">
+          <div class="info-container center" alt = "Second slide">
 
             <!-- Plugin Tittle -->
             <h1 class = "brand" >Info</h1>
@@ -141,7 +140,7 @@
    -->
   <script src="assets/jquery/jquery-3.1.1.min.js"></script>
   <script src="assets/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-  <script src="popup.js"></script>
   <script src="assets/bootstrap-toggle-master/js/bootstrap2-toggle.min.js"></script>
+  <script src="popup.js"></script>
   </body>
 </html>
