Font-awesomed GitHub

--- a/popup.html
+++ b/popup.html
@@ -14,6 +14,8 @@
          Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/bootstrap-toggle-master/css/bootstrap2-toggle.min.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- Bootstrap Core CSS -->
     <!-- Latest compiled and minified CSS -->
@@ -108,7 +110,7 @@
             </div>
 			<hr>
 
-			  <p style="text-align: right;">LionBlock | MPL-2.0 Licence &nbsp; <a href="https://www.github.com"><img class = "logoMove" style = "width: 5%; height: 5%" src="assets/images/GitHub-logo.png" /></a></p>
+			  <p style="text-align: right;"><a href="https://www.github.com"><i class="fa fa-github" style="font-size: 12px; color: black;"></i></a> LionBlock | MPL-2.0 Licence</p>
 			  
           </div>
 
@@ -131,7 +133,7 @@
 			
               <ol style="text-align: inherit; margin-left: 30px;">
 				<b>
-                <li>Francesco Polizzi</li>
+                <li> Francesco Polizzi</li>
                 <li> Andres Rodriguez </li>
                 <li> Boris Pallares </li>
                 <li> Marco De Lucca </li>
@@ -145,7 +147,7 @@
           </div>
 		  <hr>
 
-			  <p style="text-align: right;">LionBlock | MPL-2.0 Licence &nbsp; <a href="https://www.github.com"><img class = "logoMove" style = "width: 5%; height: 5%" src="assets/images/GitHub-logo.png" /></a></p>
+			  <p style="text-align: right;"><a href="https://www.github.com"><i class="fa fa-github" style="font-size: 12px; color: black;"></i></a> LionBlock | MPL-2.0 Licence</p>
         </div>
       </div>
 
