Functional link on GitHub logo click

--- a/popup.html
+++ b/popup.html
@@ -110,7 +110,7 @@
             </div>
 			<hr>
 
-			  <p style="text-align: right;"><a href="https://www.github.com"><i class="fa fa-github" style="font-size: 12px; color: black;"></i></a> LionBlock | MPL-2.0 Licence</p>
+			  <p style="text-align: right;"><a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github" style="font-size: 12px; color: black;"></i></a> LionBlock | MPL-2.0 Licence</p>
 			  
           </div>
 
@@ -147,7 +147,7 @@
           </div>
 		  <hr>
 
-			  <p style="text-align: right;"><a href="https://www.github.com"><i class="fa fa-github" style="font-size: 12px; color: black;"></i></a> LionBlock | MPL-2.0 Licence</p>
+			  <p style="text-align: right;"><a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github" style="font-size: 12px; color: black;"></i></a> LionBlock | MPL-2.0 Licence</p>
         </div>
       </div>
 
