Initial stuff for our front-backend connection

--- a/popup.html
+++ b/popup.html
@@ -91,13 +91,13 @@
 
               <!-- First button  -->
               <div class="btn-group ">
-                <button  type="button" class="btn"> Allow Ads on Page </button>
+                <button  type="button" class="btn" id="allowPage"> Allow Ads on Page </button>
               </div>  
 
               
               <!-- Second button  -->
               <div class="btn-group">
-                <button type="button" class="btn"> Allow Ads from Domain </button>
+                <button type="button" class="btn" id="allowDomain"> Allow Ads from Domain </button>
               </div>
 
 
