--- a/popup.html
+++ b/popup.html
@@ -107,7 +107,7 @@
           
               <h2 class = "stats" ><b> Statistics: </b></h2>
               <h3>Blocked on Page: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h3>
-              <h3> &nbsp; &nbsp; &nbsp;Total Blocked:</h3> 
+              <h3 id = "totalBlocked"> &nbsp; &nbsp; &nbsp;Total Blocked:</h3> 
 
             </div>
 			<hr>
