This commit fixes issues like padding, color, margin and font sizes. Better looking UI. Extension of Issue: #24

--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,7 @@
 
             <!-- Information Button
               - slides to the PREVIOUS slide in the carousel (to the left) -->
-            <a class = "carousel-control glyphicon glyphicon-question-sign" href = "#sceneSlider" data-slide = "prev"></a>
+            <a class = "carousel-control glyphicon  glyphicon-cog" href = "#sceneSlider" data-slide = "prev"></a>
           </div> <!-- Closing Main Screen Container -->
 
           <!-- Option Screen Expander
@@ -131,28 +131,30 @@
           -->
         <div class = "item">
           <div class="info-container center" alt = "Second slide">
-
             <!-- Plugin Tittle -->
-            <h1 class = "brand" >Information </h1>
+            <div class="header">
+              <h1 class = "brand" >Information </h1>
+            </div>
+
 
             <!-- Instruction and Description -->
-            <p class = "infoText"><b>LionBlock</b> is an adblocker very simple to use! Just press the slider to start blocking annoying adds!
-            <hr>
-			<h2>Adbusters Team:</h2>
-			
-              <ol>
-				<b>
+            <div class="container">
+
+              <p class = "infoText"><b>LionBlock</b> is very simple to use! <br>  Just PRESS the slider to start blocking annoying adds!</p><hr>
+			         <h2 class = "team-title" >Adbusters Team:</h2>
+               <ul>
+				        <b>
                 <li> Francesco Polizzi</li>
                 <li> Andres Rodriguez </li>
                 <li> Boris Pallares </li>
                 <li> Marco De Lucca </li>
                 <li> Nicholas Haghighi </li>
-				</b>
-              </ol>
-            </p>
+				        </b>
+              </ul>
+
 			
             <!-- Go Back Button Slider Carousel to the right -->
-            <a class = "carousel-control right glyphicon glyphicon-share-alt movement" id ="carouselLeftMove" href = "#sceneSlider" data-slide = "next"></a>
+            <a class = "carousel-control right glyphicon glyphicon-home movement" id ="carouselLeftMove" href = "#sceneSlider" data-slide = "next"></a>
           </div>
 		  <hr>
 
