Fixes a grammatical error! m

--- a/popup.html
+++ b/popup.html
@@ -140,7 +140,7 @@
             <!-- Instruction and Description -->
             <div class="container">
 
-              <p class = "infoText"><b>LionBlock</b> is very simple to use! <br>  Just PRESS the slider to start blocking annoying adds!</p><hr>
+              <p class = "infoText"><b>LionBlock</b> is very simple to use! <br>  Just PRESS the slider to start blocking annoying ads!</p><hr>
 			         <h2 class = "team-title" >Adbusters Team:</h2>
                <ul>
 				        <b>
