--- a/popup.html
+++ b/popup.html
@@ -111,7 +111,7 @@
             <div class = "container">
           
               <h2 class = "stats" ><b> Statistics: </b></h2>
-              <h3>Total Data Saved: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h3>
+              <h3 id = "totalData">Total Data Saved: &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h3>
               <h3 id = "totalBlocked"> &nbsp; &nbsp; &nbsp;Total Blocked:</h3> 
 
             </div>
