--- a/popup.html
+++ b/popup.html
@@ -96,13 +96,13 @@
 
               <!-- First button  -->
               <div class="btn-group ">
-                <button  type="button" class="btn" id="allowPage"> Allow Ads on Page </button>
+                <button  type="button" class="btn btn-success" id="allowPage"> Allow Ads on Page </button>
               </div>  
 
               
               <!-- Second button  -->
               <div class="btn-group">
-                <button type="button" class="btn" id="allowDomain"> Allow Ads from Domain </button>
+                <button type="button" class="btn btn-success" id="allowDomain"> Allow Ads on Domain </button>
               </div>
 
 
