--- a/popup.html
+++ b/popup.html
@@ -62,12 +62,12 @@
             <h1 class="brand">LionBlock</h1>
             <p class="adBlocker">Ad Blocker for Lindenwood University.</p>
           </div>
-            <!-- Rounded switch -->
-            <div class="checkbox checkbox-slider-lg checkbox-slider--a">
-              <label>
+          <!-- Rounded switch -->
+          <div class="checkbox checkbox-slider-lg checkbox-slider--a">
+            <label>
                   <input id="blockingCheckbox" type="checkbox" data-style="ios" data-onstyle="success" data-offstyle="danger" data-toggle="toggle" data-on="ON" data-off="OFF" data-width="110" data-height="40">
                 </label>
-            </div>
+          </div>
 
           <!-- Dividing line -->
           <hr>
@@ -117,7 +117,8 @@
           </div>
 
           <div class="container footer">
-            <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0 Licence</p>
+            <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0
+              Licence</p>
           </div>
 
         </div>
@@ -159,7 +160,8 @@
           </div>
 
           <div class="container footer">
-            <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0 Licence</p>
+            <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0
+              Licence</p>
           </div>
         </div>
       </div>
