--- a/popup.html
+++ b/popup.html
@@ -62,6 +62,7 @@
             <h1 class="brand">LionBlock</h1>
             <p class="adBlocker">Ad Blocker for Lindenwood University.</p>
           </div>
+
           <!-- Rounded switch -->
           <div class="checkbox checkbox-slider-lg checkbox-slider--a">
             <label>
@@ -131,7 +132,7 @@
               + Header and team names. THIS NEEDS WORK!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
           -->
       <div class="item">
-        <div class="info-container center" alt="Second slide">
+        <div class="main-container center" alt="Second slide">
           <!-- Information -->
           <div class="header">
             <h1 class="text-center">Information </h1>
@@ -142,26 +143,40 @@
           <div class="container">
 
             <p class="infoText"><b>LionBlock</b> is very simple to use! <br> Just PRESS the slider to start blocking annoying ads!</p>
-            <hr>
-            <h2 class="team-title">Adbusters Team:</h2>
-            <ul>
-              <b>
+            
+          </div>
+          <hr>
+          <!-- Dropdown Arrow Icon -->
+          <div class="infodropdown-container">
+
+            <h2 class="option-title "> Adbusters Team <span id="click-tag2" class="glyphicon glyphicon-chevron-down flip"></span></h4>
+
+          </div>
+
+          <!-- Go Back Button Slider Carousel to the right -->
+          <a class="carousel-control right icon fa fa-home movement" id="carouselLeftMove" href="#sceneSlider" data-slide="next"></a>
+
+          <div class="teaminfo-container center">
+            <!-- Group of all advance options  -->
+
+            <div class="container">
+              <ul>
+                <b>
                 <li> Francesco Polizzi</li>
                 <li> Andres Rodriguez </li>
                 <li> Boris Pallares </li>
                 <li> Marco De Lucca </li>
                 <li> Nicholas Haghighi </li>
-				        </b>
-            </ul>
+                </b>
+              </ul>
+            </div>
+ 
 
+            <div class="container footer">
+              <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0
+                Licence</p>
+            </div>       
 
-            <!-- Go Back Button Slider Carousel to the right -->
-            <a class="carousel-control right icon fa fa-home movement" id="carouselLeftMove" href="#sceneSlider" data-slide="next"></a>
-          </div>
-
-          <div class="container footer">
-            <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0
-              Licence</p>
           </div>
         </div>
       </div>
