Fixes weird behavior on window size when moving from sections

--- a/popup.html
+++ b/popup.html
@@ -82,7 +82,7 @@
 
           <!-- Information Button
               - slides to the PREVIOUS slide in the carousel (to the left) -->
-          <a class="carousel-control left icon fa fa-info" href="#sceneSlider" data-slide="prev"></a>
+          <a class="carousel-control left icon fa fa-info" href="#sceneSlider"></a>
         </div>
         <!-- Closing Main Screen Container -->
 
@@ -118,8 +118,11 @@
           </div>
 
           <div class="container footer">
-            <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0
-              Licence</p>
+            <p class="text-right footer-content"> 
+              <a target="_newtab" href="https://github.com/FrancescoSTL/LionBlock">
+                <i class="fa fa-github float-left"></i>LionBlock | MPL-2.0 Licence
+              </a>
+            </p>
           </div>
 
         </div>
@@ -143,7 +146,7 @@
           <div class="container">
 
             <p class="infoText"><b>LionBlock</b> is very simple to use! <br> Just PRESS the slider to start blocking annoying ads!</p>
-            
+
           </div>
           <hr>
           <!-- Dropdown Arrow Icon -->
@@ -154,7 +157,7 @@
           </div>
 
           <!-- Go Back Button Slider Carousel to the right -->
-          <a class="carousel-control right icon fa fa-home movement" id="carouselLeftMove" href="#sceneSlider" data-slide="next"></a>
+          <a class="carousel-control right icon fa fa-home movement" id="carouselLeftMove" href="#sceneSlider"></a>
 
           <div class="teaminfo-container center">
             <!-- Group of all advance options  -->
@@ -170,12 +173,15 @@
                 </b>
               </ul>
             </div>
- 
+
 
             <div class="container footer">
-              <p class="text-right footer-content"> <a href="https://github.com/FrancescoSTL/LionBlock"><i class="fa fa-github float-left"></i></a>LionBlock | MPL-2.0
-                Licence</p>
-            </div>       
+              <p class="text-right footer-content">
+                <a target="_newtab" href="https://github.com/FrancescoSTL/LionBlock">
+                  <i class="fa fa-github float-left"></i>LionBlock | MPL-2.0 Licence
+                </a>
+              </p>
+            </div>
 
           </div>
         </div>
