--- a/popup.html
+++ b/popup.html
@@ -100,21 +100,21 @@
 
             <!-- First button  -->
             <div class="btn-group ">
-              <button type="button" class="btn btn-primary" id="allowPage"> Allow Ads on Page </button>
+              <button type="button" class="btn btn-primary" id="allowPage">  Allow Ads on Page </button>
             </div>
 
 
             <!-- Second button  -->
             <div class="btn-group">
-              <button type="button" class="btn btn-primary" id="allowDomain"> Allow Ads on Domain </button>
+              <button type="button" class="btn btn-primary" id="allowDomain"> Allow Ads from Domain </button>
             </div>
 
 
           </div>
 
           <div class="container">
-            <h2 class="stats"><b> Statistics: </b></h2>
-            <h3>Total Ads Blocked: <span id="totalBlocked"></span></h3>
+            <h2 class="stats"> Statistics <i class="fa fa-area-chart"></i></h2>
+            <h3><i class="fa fa-spinner fa-pulse fa-fw"></i>Total Ads Blocked: <span id="totalBlocked"></span></h3>
           </div>
 
           <div class="container footer">
@@ -145,7 +145,7 @@
           <!-- Instruction and Description -->
           <div class="container">
 
-            <p class="infoText"><b>LionBlock</b> is very simple to use! <br> Just PRESS the slider to start blocking annoying ads!</p>
+            <p class="infoText text-center"><b>LionBlock</b> is very simple to use! <br> Just <u>PRESS</u> the slider to start blocking annoying advertisement.</p>
 
           </div>
           <hr>
@@ -165,11 +165,11 @@
             <div class="container">
               <ul>
                 <b>
-                <li> Francesco Polizzi</li>
-                <li> Andres Rodriguez </li>
-                <li> Boris Pallares </li>
-                <li> Marco De Lucca </li>
-                <li> Nicholas Haghighi </li>
+                <li> <i class="fa fa-code-fork"></i> Francesco Polizzi</li>
+                <li> <i class="fa fa-code-fork"></i> Andres Rodriguez </li>
+                <li> <i class="fa fa-code-fork"></i> Boris Pallares </li>
+                <li> <i class="fa fa-code-fork"></i> Marco De Lucca </li>
+                <li> <i class="fa fa-code-fork"></i> Nicholas Haghighi </li>
                 </b>
               </ul>
             </div>
