--- a/popup.html
+++ b/popup.html
@@ -114,7 +114,7 @@
 
           <div class="container">
             <h2 class="stats"> Statistics <i class="fa fa-area-chart"></i></h2>
-            <h3 id="blockedLabel"><i class="fa fa-spinner fa-pulse fa-fw"></i>Total Ads Blocked: <span id="totalBlocked"></span></h3>
+            <h3><i id="spinner" class="fa fa-spinner fa-pulse fa-fw"></i>Total Ads Blocked: <span id="totalBlocked"></span></h3>
           </div>
 
           <div class="container footer">
