Refactoring and adding comments!

--- a/popup.html
+++ b/popup.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <!-- Section added by Marco De Lucca 
+  <!-- Section  
       -  setting slider composed of two scenes, our main scene containing the ON/OFF button, headers and subheaders. 
       -  Bootstrap Core  
       - carousel slider allows for the multiple scene, similar to a composer -->
@@ -41,7 +41,7 @@
     <!-- Carousel items -->
     <div class="carousel-inner">
 
-      <!-- Section added by Marco De Lucca 
+      <!-- Section 
           -  setting the main container as the DEFAULT active element to display in the carousel. 
           -  Bootstrap Core  
           - carousel slider allows for the multiple scene, similar to a composer -->
@@ -95,16 +95,16 @@
               + Statisctics: Total Ads Blocked.
         -->
         <div class="option-container center">
-          <!-- Group of all advance options  -->
+          <!-- Group of all advanced options  -->
           <div class="btn-group-vertical" role="group">
 
-            <!-- First button  -->
+            <!-- First button: allow advertisements on page  -->
             <div class="btn-group ">
               <button type="button" class="btn btn-default" id="allowPage"><i id="pageCheck" class="fa fa-check" aria-hidden="true"></i> Allow Ads on Page</button>
             </div>
 
 
-            <!-- Second button  -->
+            <!-- Second button: allow advertisements on domain -->
             <div class="btn-group">
               <button type="button" class="btn btn-default" id="allowDomain"><i id="domainCheck" class="fa fa-check" aria-hidden="true"></i> Allow Ads on Domain</button>
             </div>
@@ -112,11 +112,13 @@
 
           </div>
 
+          <!-- Statistics container -->
           <div class="container">
             <h2 class="stats"> Statistics <i class="fa fa-area-chart"></i></h2>
             <h3><i id="spinner" class="fa fa-spinner fa-pulse fa-fw"></i>Total Ads Blocked: <span id="totalBlocked"></span></h3>
           </div>
 
+          <!-- Footer container -->
           <div class="container footer">
             <p class="text-right footer-content"> 
               <a target="_newtab" href="https://github.com/FrancescoSTL/LionBlock">
@@ -132,7 +134,7 @@
       <!-- Information Left Carousel Scene
             -  Expands the main container for more advance options. 
             -  Contains the following elements:
-              + Header and team names. THIS NEEDS WORK!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+              + Header and team names.
           -->
       <div class="item">
         <div class="main-container center" alt="Second slide">
@@ -148,7 +150,10 @@
             <p class="infoText text-center"><b>LionBlock</b> is very simple to use! <br> Just <u>PRESS</u> the slider to start blocking annoying advertisement.</p>
 
           </div>
+
+          <!-- Dividing line -->
           <hr>
+
           <!-- Dropdown Arrow Icon -->
           <div class="infodropdown-container">
 
@@ -162,6 +167,7 @@
           <div class="teaminfo-container center">
             <!-- Group of all advance options  -->
 
+            <!-- Team developer names container -->
             <div class="container">
               <ul>
                 <b>
@@ -175,6 +181,7 @@
             </div>
 
 
+            <!-- Footer container -->
             <div class="container footer">
               <p class="text-right footer-content">
                 <a target="_newtab" href="https://github.com/FrancescoSTL/LionBlock">
