Refactoring and added contact us email info!

--- a/popup.html
+++ b/popup.html
@@ -59,8 +59,8 @@
 
           <!-- Plugin Tittle -->
           <div class="header">
-            <h1 class="brand">LionBlock</h1>
-            <p class="adBlocker">Ad Blocker for Lindenwood University.</p>
+            <h1 class="brand"> LionBlock </h1>
+            <p class="adBlocker"> Ad Blocker for Lindenwood University. </p>
           </div>
 
           <!-- Rounded switch -->
@@ -178,6 +178,8 @@
                 <li> <i class="fa fa-code-fork"></i> Nicholas Haghighi </li>
                 </b>
               </ul>
+              <h5 class="infoText text-center"> Contact the Team! </h5> 
+              <p class="text-center email"> <i class="fa fa-envelope"></i> contact.lionblock@gmail.com </p> 
             </div>
 
 
